[package]
name = "cdk-litd"
version = "0.12.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
cdk-common = { path = "../cdk-common", version = "=0.12.0" }
cdk-lnd = { path = "../cdk-lnd", version = "=0.12.0" }
tokio = { version = "1", features = ["rt", "macros", "sync", "fs"] }
tonic = { version = "0.13.1", default-features = false, features = ["tls-ring", "prost", "transport"] }
prost = "0.13.1"
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
hex = "0.4"
http = "1"
hyper-rustls = { version = "0.27" }
hyper-util = { version = "0.1", features = ["client", "http2", "client-legacy", "tokio"] }
rustls = { version = "0.23" }
rustls-pemfile = "2"

[lib]
name = "cdk_litd"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.1"

